2024-03-12  Lee Howard <faxguy@howardsilvan.com>

	Fix tiffcrop issue #552
	tiffcrop issue #561 appears to already be addressed
	tiffcrop issue #562 appears to already be addressed
	tiffcrop issue #563 appears to already be addressed
	tiffcrop issue #564 appears to already be addressed
	tiffcrop issue #565 appears to already be addressed
	tiffcrop issue #566 appears to already be addressed
	tiffcrop issue #567 appears to already be addressed
	tiffcrop issue #568 appears to already be addressed
	tiffcrop issue #569 appears to already be addressed
	tiffcrop issue #573 appears to already be addressed
	tiffcrop issue #590 appears to already be addressed
	tiffcrop issue #593 appears to already be addressed
	tiffcrop issue #594 already addressed by commit 42173d6a 2022-12-08
	tiffcrop issue #595 already addressed by commit 5320c9d8 2023-10-31
	Apply recommended changes for tiff2pdf issue #596
	Apply recommended changes for tiffmedian issue #599

2024-03-11  Lee Howard <faxguy@howardsilvan.com>

	Restore tools and tiffcp -i option removed in v4.6.0

2023-09-05  Even Rouault  <even.rouault@spatialys.com>

	libtiff v4.6.0 released

2023-09-05  Even Rouault  <even.rouault@spatialys.com>

	Merge branch 'fix_600' into 'master'
	CMake: fix build with -Dstrip-chopping=off (fixes #600)

	See merge request libtiff/libtiff!527

2023-09-05  Even Rouault  <even.rouault@spatialys.com>

	Merge branch 'georgthegreat-master-patch-87447' into 'master'
	Fix using __attribute__ libtiff with clang-for-windows

	See merge request libtiff/libtiff!525

2023-09-05  Yuriy Chernyshov  <georgthegreat@gmail.com>

	Fix using __attribute__ libtiff with clang-for-windows.

2023-09-05  Even Rouault  <even.rouault@spatialys.com>

	Merge branch 'manpage_TIFFField_docu_update' into 'master'
	manpages: TiffField functions documentation updated with return behaviour for...

	See merge request libtiff/libtiff!526

2023-09-05  Even Rouault  <even.rouault@spatialys.com>
